    => "Debugging options" => "Debugger option: ..."),
    including "debugger", "normal" & "watch". Also, the
    built-in DEBUGBOX command without a parameter will
    start the DOSBox-X debugger. (Wengier)
  - Added menu options "Generate NMI interrupt" & "Hook
    INT 2Fh calls" ("Help" => "Debugging options") for
    more debugging options. (Wengier)
  - Fixed issues related to screen dimensions in TTF
    output in CGA/EGA modes since 0.83.12. (Wengier)
  - Integrated SVN commits (Allofich)
    - r4443: Improve detection of Paradise SVGA in some
    installers with additional signature.
    - Improve bittest instructions to wrap more
    correctly. 
    - r4454: Enable A20 routines in BIOS.
0.83.13
  - DOSBox-X can now resolve file paths in its config
    options that include environment variables on non-
    Windows platforms (e.g. ${HOME}..) as well. A new
    config option "resolve config path" (in [dosbox]
    section) is added to control path resolving in the
    config file (e.g. to resolve tildes only by setting
    to "tilde", or disable all path resolving). (Wengier)
  - System menu text in Windows builds now match the text
    in the drop-down menus to be translatable by language
    files and is compatible with Unicode. (Wengier)
  - The error "Access Denied" is returned instead of
    "File not found" for files opened exclusively in
    another program on mounted local drives. (Wengier)
  - S386C928 hardware cursor fixed to divide X coordinate
    by bytes per pixel indicated in the control register
    to match apparent Windows 3.1/95 behavior. Cursor
    now tracks host properly even in highcolor/truecolor
    modes.
  - Added support for the RetroWave OPL3 hardware player.
    Set "oplemu=retrowave_opl3" in [sblaster] section of
    the config file to use it. Config options including
    "retrowave_bus", "retrowave_spi_cs", "retrowave_port"
    are added to adjust its settings. (ClassicOldSong)