@@ -68,6 +68,8 @@
   - Added menu options "Generate NMI interrupt" & "Hook
     INT 2Fh calls" ("Help" => "Debugging options") for
     more debugging options. (Wengier)
+  - Fixed mouse not automatically captured as DOSBox-X
+    starts with the setting fullscreen=true. (Wengier)
   - Fixed issues related to screen dimensions in TTF
     output in CGA/EGA modes since 0.83.12. (Wengier)
   - Integrated SVN commits (Allofich)
